# den_nye

./: .env.  .env.example  README.md  config.yaml  pyproject.toml
.github/: copilot-instructions.md
docs/: __init__.md  __main__.md  coffee_shop.md  config.md  demos.md  geo.md  maplibre_anymap.md  mqtt.md  overview.md  setup.md  testing.md
notebooks/: 01_maps_and coordinates.ipynb
notebooks/02_mqtt_intro/: Broker_publisher.ipynb  Broker_subscriber.ipynb
notebooks/03_mqtt_random_walk/: coffee_shop.ipynb  map_viewer.ipynb  person_walker.ipynb  weather_service.ipynb
scripts/demo/: 01_config_and_mqtt.py  02_geo_crs_transforms.py  02_mqtt_subscribe.py  coffee_shop.py
src/simulated_city/: __init__.py  __main__.py  config.py  geo.py  maplibre_live.py  mqtt.py
tests/: test_config.py  test_geo.py  test_maplibre_live.py  test_smoke.py
